--- a/neuralearn_ml/testing.ipynb
+++ b/neuralearn_ml/testing.ipynb
@@ -92,12 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "67231c10",
    "metadata": {
     "cellId": "q17stro8w4fumokgxp3fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Limits exceeded",
+     "evalue": "Not enough units in project to continue executions. Please contact your project admin.\n",
+     "output_type": "error",
+     "traceback": []
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    }
+   ],
    "source": [
     "#!g1.1\n",
     "# Use a pipeline as a high-level helper\n",
@@ -371,17 +386,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "DataSphere Kernel",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.16"
   },
   "notebookId": "219fd512-a539-4600-9d18-32e58e673f7e",
   "notebookPath": "Untitled.ipynb"
